--- a/front/src/components/Detail/Detail.module.css
+++ b/front/src/components/Detail/Detail.module.css
@@ -5,14 +5,33 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
+    margin-top: 5%;
 }
-
-.info{
-    color: rgba(1, 24, 202, 0.995);
-    text-decoration: double;
-    font-weight: bold;
-    font-family: monospace;
-    font-size: 300%;
-    position: relative;
-    top: -15vw;
+  
+  .info{
+    display: flex;
+    margin-left: 5%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: antiquewhite;
+    background-color: saddlebrown;
+  }
+  
+  h2 {
+    margin-top: 5%;
+    font-size: 2rem;
+  }
+  
+  img {
+    max-width: 100%;
+    flex-direction: column;
+    border-radius: 10px;
+    margin-top: 1rem;
+  }
+  
+.button{
+    justify-content: flex-start;
 }
